# aries-vcx

./: .dockerignore  .editorconfig  .gitignore  .rustfmt.toml  ARIES.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  MAINTAINERS.md  README.md  ROADMAP.md  ROADMAP_2023.md  add_rustfmt_hook.sh  aries.md  changelog.md  codecov.yml  justfile  libindy.Dockerfile  libvcx.Dockerfile  migration.md  roadmap.md  rustfmt.toml  testnet
agency_client/: Cargo.toml
agency_client/src/: agency_client.rs  agency_settings.rs  agent_utils.rs  configuration.rs  create_key.rs  create_keys.rs  error.rs  get_message.rs  httpclient.rs  lib.rs  message_type.rs  mocking.rs  payload.rs  update_connection.rs  update_message.rs  update_profile.rs
agency_client/src/api/: agent.rs  downloaded_message.rs  messaging.rs  mod.rs  onboarding.rs
agency_client/src/errors/: error.rs  mapping_sharedvcx.rs  mod.rs
agency_client/src/internal/: messaging.rs  mod.rs
agency_client/src/messages/: a2a_message.rs  connect.rs  create_agent.rs  create_key.rs  forward.rs  get_messages.rs  message_type.rs  mod.rs  onboarding.rs  sign_up.rs  update_com_method.rs  update_connection.rs  update_message.rs
agency_client/src/testing/: mocking.rs  mod.rs  (+3 more)
agency_client/tests/: integration.rs
aries/aries_vcx/: Cargo.toml  README.md
aries/aries_vcx_anoncreds/: Cargo.toml
aries/aries_vcx_core/: Cargo.toml
aries/aries_vcx_ledger/: Cargo.toml
aries/aries_vcx_wallet/: Cargo.toml
aries/messages/: Cargo.toml  README.md
aries/messages_macros/: Cargo.toml
aries_framework_vcx/: Cargo.toml  README.md
aries_framework_vcx/src/: lib.rs
aries_vcx/: Cargo.toml  README.md  TUTORIAL.md  readme.md
aries_vcx/docs/: guidelines.md
aries_vcx/genesis/: indicio_genesis.txn  local_genesis.txn  vpc_genesis.txn
aries_vcx/migrations/: 20210903123945_migration0.sql
aries_vcx/src/: actors.rs  error.rs  init.rs  lib.rs  settings.rs  transport.rs
aries_vcx/tails.txt/: 3KQ6Ef6E2LQQb85jb8kATZPHTZwiKBsCC9PAPtr5kbQx  5b534m78fJiVNAj2q1qBxQPKjmNPhXYjrJyNXLsRP44M  6GA72MbjhyEwgkb6xKi2HTWzWEEoQqUvgvEnzsH1Anu9  Azkgu2n6Vu6kPygbNj8z5vxV722opVxnFx7waHRDUcKK  BpEM3wbxe1x4GoaX3xyyts6MSDs1ixyYmTQKkE4b7PQ1  HcpMG1o8JK4tkcVyryFuJ73RZ4gShjwEjfNVGccRCckZ  HfPW4UTEAXfPJJkszuBkFxvEGNzEF9bp44WCpHcab5K1
aries_vcx/tests/: temp_gm2_tests.rs  temp_gm_tests.rs  test_agency.rs  test_anoncreds.rs  test_connection.rs  test_credential_issuance.rs  test_credential_issuance_v2.rs  test_credential_retrieval.rs  test_credentials.rs  test_creds_proofs.rs  test_creds_proofs_revocations.rs  test_did_exchange.rs  test_integration.rs  test_migration_creds_proofs.rs  test_migration_creds_proofs_revocations.rs  test_mysql_wallet.rs  test_pgsql_plugin.rs  test_pool.rs  test_primitives.rs  test_proof_presentation.rs  test_revocations.rs  test_verifier.rs
aries_vcx_core/: Cargo.toml
aries_vcx_core/src/: lib.rs
cred_migrator/: Cargo.toml
cred_migrator/src/: error.rs  lib.rs
demo/alice/: Cargo.toml
did_core/did_doc/: Cargo.toml
did_doc/: Cargo.toml
did_doc/src/: error.rs  lib.rs
did_doc/tests/: serde.rs
did_doc_builder/: Cargo.toml  rustfmt.toml
did_doc_builder/src/: error.rs
did_doc_builder/tests/: serde.rs
did_doc_sov/: Cargo.toml
did_doc_sov/src/: error.rs  lib.rs
did_doc_sov/tests/: builder.rs  serde.rs  serde_legacy.rs
did_resolver/: Cargo.toml
did_resolver/src/: lib.rs
did_resolver_sov/: Cargo.toml
did_resolver_sov/src/: lib.rs  service.rs
did_resolver_sov/tests/: resolution.rs
diddoc/: Cargo.toml
diddoc/src/: lib.rs
indy_facade/: Cargo.toml
indy_facade/src/: error.rs  lib.rs  wallet.rs
indy_ledger_response_parser/: Cargo.toml
indy_ledger_response_parser/src/: lib.rs
indy_ledger_response_parser/tests/: test_author_agreement.rs
libvcx/: Cargo.toml  README.md  android.build.sh  android.test.sh  android.wrapper.test.sh  build.rs  readme.md  structure.md
libvcx/include/: vcx.h
libvcx/sample_config/: config.json
libvcx/src/: connection.rs  credential.rs  credential_def.rs  credential_request.rs  disclosed_proof.rs  disclosed_proof_utils.rs  error.rs  filters.rs  init.rs  issuer_credential.rs  issuer_credential_utils.rs  lib.rs  mock_settings.rs  proof.rs  proof_utils.rs  schema.rs  settings.rs
libvcx/tails.txt/: GedWbCuEYRcXK1ndGUrygAwSw6GDHnEWpoeVuLrZEhan
libvcx/tests/: logging.rs
libvcx_core/: Cargo.toml  README.md  build.rs
libvcx_core/src/: lib.rs
libvdrtools/: Cargo.toml  android.build.sh  android.test.sh  build.rs  docker-compose.yml  libvdrtools.spec  mac.build.sh
libvdrtools/benches/: wallet.rs
libvdrtools/ci/: android.dockerfile  centos.dockerfile  setup.android.env.sh  ubuntu.dockerfile  ubuntu18.dockerfile  ubuntu20.dockerfile
libvdrtools/debian/: control  libindy-dev.install  libindy.install
libvdrtools/include/: indy_core.h  indy_ledger.h  indy_vdr.h  vdr.h
libvdrtools/indy-api-types/: Cargo.toml
libvdrtools/indy-utils/: Cargo.toml
libvdrtools/indy-wallet/: Cargo.toml
libvdrtools/rpm/: libvdrtools.spec.in
libvdrtools/src/: lib.rs
libvdrtools/tests/: anoncreds.rs  anoncreds_demos.rs  cache.rs  cheqd_keys.rs  cheqd_ledger_auth.rs  cheqd_ledger_bank.rs  cheqd_ledger_cheqd.rs  cheqd_ledger_tx.rs  cheqd_pool.rs  crypto.rs  demo.rs  did.rs  error.rs  indy.rs  interaction.rs  ledger.rs  logger.rs  logger_lvl.rs  metrics.rs  non_secrets.rs  pairwise.rs  pool.rs  vdr_demos.rs  wallet.rs
mediator/: .gitignore  Cargo.toml  README.md
mediator/src/: lib.rs  main.rs  routes.rs  tui.rs
mediator/tests/: mediator-aries.rs  mediator-coord.rs  mediator-oob.rs
messages/: Cargo.toml  README.md
messages/src/: ack.rs  actors.rs  attachment.rs  error.rs  forward.rs  lib.rs  localization.rs  maybe_known.rs  mime_type.rs  msg_parts.rs  problem_report.rs  status.rs  thread.rs  timing.rs
messages2/: Cargo.toml
messages2/src/: a2a.rs  aries_message.rs  composite_message.rs  delayed_serde.rs  did.rs  lib.rs  macros.rs  maybe_known.rs  message.rs  mime_type.rs  msg_parts.rs  utils.rs
shared_vcx/: Cargo.toml
shared_vcx/src/: http_client.rs  httpclient.rs  lib.rs  maybe_known.rs
(+4114 files in other folders)
