[workspace]
resolver = "2"

members = [
    "aries/aries_vcx",
    "aries/messages_macros",
    "aries/messages",
    "aries/misc/shared",
    "aries/misc/legacy/diddoc_legacy",
    "aries/agents/mediator",
    "aries/agents/mediator/client-tui",
    "aries/agents/aries-vcx-agent",
    "aries/agents/aath-backchannel",
    "aries/wrappers/uniffi-aries-vcx/core",
    "aries/aries_vcx_anoncreds",
    "aries/aries_vcx_wallet",
    "aries/aries_vcx_ledger",
    "aries/misc/indy_ledger_response_parser",
    "aries/misc/test_utils",
    "did_core/did_doc",
    "did_core/did_methods/did_peer",
    "did_core/did_methods/did_key",
    "did_core/did_parser_nom",
    "did_core/did_resolver",
    "did_core/did_resolver_registry",
    "did_core/did_methods/did_resolver_sov",
    "did_core/did_methods/did_resolver_web",
    "did_core/public_key",
    "misc/simple_message_relay",
    "misc/display_as_json",
    "did_core/did_methods/did_jwk",
    "did_core/did_methods/did_cheqd",
    "did_core/did_methods/did_cheqd/cheqd_proto_gen",
]

[workspace.package]
version = "0.67.0"
authors = [
    "Absa Group Limited",
    "Hyperledger Indy Contributors <hyperledger-indy@lists.hyperledger.org>",
]
description = "Library to work with Aries protocols & collection of supporting components"
license = "Apache-2.0"
edition = "2021"
rust-version = "1.81"

[profile.release]
debug = 0
panic = 'unwind'
incremental = false

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
struct_excessive_bools = "allow"
trivially_copy_pass_by_ref = "allow"
must_use_candidate = "allow"
match_bool = "allow"
no_effect_underscore_binding = "allow"
module_name_repetitions = "allow"

[workspace.lints.rust]
meta_variable_misuse = "warn"
missing_abi = "warn"
missing_copy_implementations = "warn"
missing_debug_implementations = "warn"
non_ascii_idents = "warn"
pointer_structural_match = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"
unused_qualifications = "warn"
let_underscore_drop = "allow"

[workspace.dependencies]
# aries
anoncreds = { git = "https://github.com/hyperledger/anoncreds-rs.git", tag = "v0.2.0" }
anoncreds-clsignatures = "0.3.2"
aries-askar = { version = "0.4.0" }
askar-crypto = { version = "0.3.3", default-features = false }
# TODO - we are awaiting indy-vdr >0.4.3 release, as 0.4.3 is incompatible with rust 1.80+.
# for now, this points to `main` branch commit after the fix
indy-vdr = { git = "https://github.com/hyperledger/indy-vdr.git", rev = "b4dc08b", default-features = false, features = [
    "log",
] }
indy-vdr-proxy-client = { git = "https://github.com/hyperledger/indy-vdr.git", rev = "b4dc08b" }

# common
base64 = "0.22.1"
bs58 = "0.5.1"
multibase = "0.9.1"
percent-encoding = "2"
hex = "0.4.3"
pem = "3.0.4"
serde = { version = "1.0.217", default-features = false }
serde_json = "1.0.134"
derive_more = "2.0.1"
async-trait = "0.1.83"
futures = { version = "0.3.31", default-features = false }
log = "0.4.22"
url = { version = "2.5.4", default-features = false }
uuid = { version = "1.11.0", default-features = false, features = ["v4"] }
chrono = { version = "0.4.39", default-features = false }
typed-builder = "0.20.0"
thiserror = "2.0.11"
anyhow = "1.0.95"
regex = "1.11.1"
lazy_static = "1.5.0"
once_cell = "1.20.2"
rand = "0.9.0"
time = "0.3.37"
bitvec = "1.0.1"
sha2 = "0.10.8"
unsigned-varint = "0.8.0"
strum = "0.27.0"
strum_macros = "0.27.0"
syn = "2.0.98"
proc-macro2 = "1.0.58"
darling = "0.20.1"
quote = "1.0.38"
clap = "4.5.29"
zeroize = "1"
nom = "7.1.3"
bytes = "1.8.0"
cursive = "0.20.0"
android_logger = "0.14.1"
transitive = "1.0.1"
isolang = "2.2.0"
num-bigint = "0.4.5"
derive_builder = "0.20.0"
backtrace = "0.3"
uniresid = { version = "0.1.4", default-features = false }
lru = "0.13.0"

# common drivers
tokio = { version = "1.42.0", default-features = false }
sqlx = "0.8.2"
reqwest = "0.12.12"
axum = "0.8.1"
actix-web = "4"
tower-http = "0.6.2"
hyper= "1.6.0"
hyper-tls = "0.6.0"
hyper-util = "0.1.10"
http-body-util = "0.1.2"
native-tls = "0.2.12"
tonic = { version = "0.12.3", default-features = false }
tonic-build = "0.12.3"
prost = { version = "0.13.3", default-features = false }
prost-types = "0.13.3"

# common dev
mockall = "0.13.1"
env_logger = "0.11.6"
uniffi = "0.23.0"
pretty_assertions = "1.4.0"
dotenvy = "0.15"
serde_test = "1.0.176"
tokio-test = "0.4.2"
