[package]
name = "agency_client"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[lib]
doctest = false

[dependencies]
env_logger = "0.9.0"
log = "0.4.16"
lazy_static = "1.3"
serde = "1.0.97"
serde_json = "1.0.40"
serde_derive = "1.0.97"
regex = "1.1.0"
url = { version = "2.3", features = ["serde"] }
uuid = { version = "0.8", default-features = false, features = ["v4"]}
thiserror = "1.0.37"
async-trait = "0.1.73"
shared_vcx = { path = "../shared_vcx" }
