[package]
name = "aries_framework_vcx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aries_vcx = { path = "../aries/aries_vcx", features = [
  "anoncreds",
  "askar_wallet",
] }
async-trait = "0.1.81"
did_resolver_registry = { path = "../did_core/did_resolver_registry" }
did_peer = { path = "../did_core/did_methods/did_peer" }
env_logger = "0.11.3"
log = "0.4.22"
reqwest = { version = "0.12.7", features = ["json"] }
serde = "1.0.97"
serde_json = "1.0.40"
thiserror = "1.0.63"
url = "2.5.2"
uuid = { version = "1.10.0", features = [
  "v4",       # Lets you generate random UUIDs
  "fast-rng", # Use a faster (but still sufficiently random) RNG
] }
