[package]

name = "aries-vcx"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"
doctest = false

[features]
# Feature flag to include the 'modular library' dependencies (vdrtools alternatives; indy-vdr, indy-credx)
credx = ["aries_vcx_core/credx", "test_utils/vdrtools_wallet"]
vdr_proxy_ledger = [
    "aries_vcx_core/vdr_proxy_ledger",
    "aries_vcx_core/vdrtools_wallet",
    "test_utils/vdr_proxy_ledger",
    "credx",
]
vdrtools_wallet = [
    "aries_vcx_core/vdrtools_wallet",
    "test_utils/vdrtools_wallet",
]

# Feature for allowing legacy proof verification
legacy_proof = ["aries_vcx_core/legacy_proof"]

[dependencies]
agency_client = { path = "../agency_client" }
messages = { path = "../messages" }
diddoc_legacy = { path = "../diddoc_legacy" }
aries_vcx_core = { path = "../aries_vcx_core" }
shared_vcx = { path = "../shared_vcx" }
bs58 = "0.5.0"
async-trait = "0.1.53"
env_logger = "0.10.0"
log = "0.4.16"
chrono = "0.4.23"
time = "0.3.20"
lazy_static = "1.3"
rand = "0.8.5"
serde = "1.0.97"
serde_json = "1.0.40"
serde_derive = "1.0.97"
regex = "1.1.0"
base64 = "0.21.4"
sha2 = "0.10.7"
num-bigint = "0.4.3"
futures = { version = "0.3", default-features = false }
uuid = { version = "1.4.1", default-features = false, features = ["v4"] }
strum = "0.25.0"
strum_macros = "0.25.2"
derive_builder = "0.12.0"
tokio = { version = "1.20.4" }
thiserror = "1.0.37"
url = { version = "2.3", features = ["serde"] }

[dev-dependencies]
test_utils = { path = "../tools/test_utils" }
libvcx_logger = { path = "../tools/libvcx_logger" }
wallet_migrator = { path = "../wallet_migrator" }
async-channel = "1.7.1"
tokio = { version = "1.20", features = ["rt", "macros", "rt-multi-thread"] }
