[package]
name = "aries_vcx_core"
version = "0.1.0"
edition = "2021"

[features]
########################## DEP FLAGS ################################
# Feature flag to include the libvdrtools dependency
vdrtools_anoncreds = ["dep:libvdrtools"]
vdrtools_wallet = ["dep:libvdrtools"]
# Feature flag to include the 'modular library' dependencies (vdrtools alternatives; indy-vdr, indy-credx)
modular_libs = ["dep:indy-credx"]
vdr_proxy_ledger = ["modular_libs", "dep:indy-vdr-proxy-client"]

[dependencies]
agency_client = { path = "../agency_client" }
indy-vdr = { version = "0.3.4", default-features = false, features = ["ffi", "log"], optional = true }
indy-credx = { git = "https://github.com/hyperledger/indy-shared-rs", tag = "v1.0.1", optional = true }
libvdrtools = { path = "../libvdrtools", optional = true }
indy-api-types = { path = "../libvdrtools/indy-api-types" }
async-trait = "0.1.68"
futures = { version = "0.3", default-features = false }
serde_json = "1.0.95"
time = "=0.3.20"
serde = { version = "1.0.159", features = ["derive"] }
rand = "0.7.3"
log = "0.4.17"
thiserror = "1.0.40"
lazy_static = "1.4.0"
derive_builder = "0.12.0"
uuid = { version = "1.3.0", default-features = false, features = ["v4"] }
tokio = { version = "1.20" }
indy-vdr-proxy-client = { git = "https://github.com/Patrik-Stas/indy-vdr.git", rev = "3cd499ad75", optional = true }
indy-ledger-response-parser = { path = "../indy_ledger_response_parser" }
lru = { version = "0.10.0"  }

[dev-dependencies]
tokio = { version = "1.20", features = ["rt", "macros", "rt-multi-thread"] }
