[package]
name = "cred_migrator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aries_vcx_core = { path = "../aries_vcx_core", features = ["vdrtools", "modular_libs"] }
vdrtools = { package = "libvdrtools", path = "../libvdrtools" }