[package]
name = "cred_migrator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aries_vcx_core = { path = "../aries_vcx_core", features = ["modular_libs"] }
credx = { package = "indy-credx", git = "https://github.com/anonyome/indy-shared-rs.git", rev = "7342bc624d23ece8845d1a701cd2cdc9cd401bb0" }
vdrtools = { package = "libvdrtools", path = "../libvdrtools" }
serde_json = "1.0.96"
thiserror = "1.0.40"
log = "0.4.19"

[dev-dependencies]
tokio = { version = "1.28.2", features = ["macros", "rt"] }
