[package]
name = "did_doc"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.21.2"
bs58 = "0.5.0"
did_parser = { path = "../did_parser" }
public_key = { path = "../aries/public_key" }
hex = "0.4.3"
multibase = "0.9.1"
pem = "2.0.1"
serde = { version = "1.0.159", default-features = false, features = ["derive"] }
serde_json = "1.0.95"
uniresid = { version = "0.1.4", default-features = false, features = ["serde"] }
url = { version = "2.3.1", features = ["serde"] }
