[package]
name = "did_doc_sov"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
did_doc = { path = "../did_doc" }
serde = { version = "1.0.159", default-features = false, features = ["derive"] }
serde_json = "1.0.95"
thiserror = "1.0.40"
