[package]
name = "did_doc_sov"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.21.2" # TODO: Remove after transition to new DDO is done
did_doc = { path = "../did_doc" }
did_key = { path = "../did_key" }
public_key = { path = "../public_key" } # TODO: Remove after transition to new DDO is done
serde = { version = "1.0.159", default-features = false, features = ["derive"] }
serde_json = "1.0.95"
thiserror = "1.0.40"
url = "2.4.0"
