[package]
name = "did_resolver_sov"
version = "0.1.0"
edition = "2021"

[features]
default = []
vdrtools = ["aries_vcx_core/vdrtools"]
modular_libs = ["aries_vcx_core/modular_libs"]
mock = ["dep:mockall"]

[dependencies]
did_resolver = { path = "../did_resolver" }
aries_vcx_core = { path = "../aries_vcx_core" }
lru = "0.10.0"
async-trait = "0.1.68"
env_logger = "0.10.0"
log = "0.4.17"
mockall = { version = "0.11.4", optional = true }
serde_json = "1.0.96"
serde = { version = "1.0.160", features = ["derive"] }
chrono = { version = "0.4.24", default-features = false }
thiserror = "1.0.40"

[dev-dependencies]
aries-vcx = { path = "../aries_vcx" }
aries_vcx_core = { path = "../aries_vcx_core", features = ["mock"] }
tokio = { version = "1.27.0", default-features = false, features = ["macros", "rt"] }
uuid = "1.3.1"
