[package]
name = "did_resolver_sov"
version = "0.1.0"
edition = "2021"

[dependencies]
did_resolver = { path = "../did_resolver" }
aries_vcx_core = { path = "../aries_vcx_core", default_features = false}
did_doc_sov = { path = "../did_doc_sov" }
async-trait = "0.1.68"
mockall = "0.11.4"
serde_json = "1.0.96"
serde = { version = "1.0.160", features = ["derive"] }
chrono = { version = "0.4.24", default-features = false }
thiserror = "1.0.40"
url = "2.3.1"

[dev-dependencies]
aries-vcx = { path = "../aries_vcx" }
tokio = { version = "1.27.0", default-features = false, features = ["macros", "rt"] }
uuid = "1.3.1"
test_utils = {path = "../tools/test_utils" }
