[package]
name = "diddoc"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[lib]
doctest = false

[features]
test_utils = []
general_test = ["test_utils"]

[dependencies]
serde = "1.0.97"
serde_json = "1.0.40"
serde_derive = "1.0.97"
url = "2.3"
thiserror = "1.0.37"
shared_vcx = { path = "../shared_vcx" }
