[package]
name = "diddoc"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies]
serde = "1.0.97"
serde_json = "1.0.40"
serde_derive = "1.0.97"
url = { version = "2.3", features = ["serde"] }
thiserror = "1.0.37"
shared_vcx = { path = "../shared_vcx" }

[dev-dependencies]
serde_json = "1.0.91"
