[package]
name = "indy_facade"
version = "0.1.0"
authors = ["Patrik Stas <patrik.stas@absa.africa>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "indy_facade"
path = "src/lib.rs"

[dependencies]
env_logger = "0.5.10"
log = "0.4"
lazy_static = "1.3"
failure = "0.1.6"
indy = { git = "https://gitlab.com/PatrikStas/vdr-tools.git", rev = "b5fd711a" }
indy-sys = { git = "https://gitlab.com/PatrikStas/vdr-tools.git", rev = "b5fd711a" }
serde = "1.0.97"
serde_json = "1.0.40"
serde_derive = "1.0.97"