[package]
name = "indy-ledger-response-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
time = "0.3.21"
ursa = { version = "0.3.7" }
indy-api-types = { path = "../libvdrtools/indy-api-types" }
indy-vdr = { git = "https://github.com/Patrik-Stas/indy-vdr.git", rev = "776d56ee0859", default-features = false, features = ["log"] }
