[package]
name = "indy-ledger-response-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
time = "=0.3.20"
indy-vdr = { git = "https://github.com/Patrik-Stas/indy-vdr.git", rev = "3cd499ad75", default-features = false, features = ["log"] }
thiserror = "1.0.44"
anoncreds-clsignatures = "0.2.0"
