[package]
name = "libvcx"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[lib]
name = "vcx"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib"]
doctest = false

[features]
test_utils = [ "aries-vcx/test_utils" ]
pool_tests = [ "test_utils" ]
general_test = [ "test_utils" ]
# to_restore = []
fatal_warnings = []
ios-wrapper = ["aries-vcx/ios-wrapper"]

[dependencies]
once_cell = { version = "1.15" }
cfg-if = { version = "1.0" }
env_logger = "0.9.0"
log = "0.4.16"
chrono = "0.4.19"
time = "0.1.44"
lazy_static = "1.3"
libc = "=0.2.114"
napi = { version = "2.10.1", default-features = false, features = [ "async" ] }
napi-derive = { version = "2.9.1" }
rand = "0.7.3"
serde = "1.0.97"
serde_json = "1.0.40"
serde_derive = "1.0.97"
base64 = "0.10"
futures = { version = "0.3", default-features = false }
tokio = { version = "1.15.0", features = ["rt-multi-thread"] }
uuid = {version = "0.7.1", default-features = false, features = ["v4"]}
failure = "0.1.8"
aries-vcx = { path = "../aries_vcx" }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.5"

[dev-dependencies]
tokio = { version = "1.15", features = [ "rt", "macros" ] }

[build-dependencies]
napi-build = "2.0.1"
