[package]
name = "libvcx"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[lib]
name = "vcx"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib", "lib"]
doctest = false

[features]
fatal_warnings = []
default = ["anoncreds_vdrtools"]

anoncreds_credx = ["libvcx_core/anoncreds_credx"]
anoncreds_vdrtools = ["libvcx_core/anoncreds_vdrtools"]

[dependencies]
num-traits = "0.2.0"
once_cell = { version = "1.15" }
cfg-if = { version = "1.0" }
env_logger = "0.9.0"
log = "0.4.16"
chrono = "0.4.23"
time = "=0.3.20"
lazy_static = "1.3"
libc = "=0.2.139"
rand = "0.7.3"
serde = "1.0.97"
serde_json = "1.0.40"
serde_derive = "1.0.97"
futures = { version = "0.3", default-features = false }
tokio = { version = "1.20.4", features = ["rt-multi-thread"] }
aries-vcx = { path = "../aries_vcx" }
thiserror = "1.0.37"
uuid = { version = "0.7.4", default-features = false, features = ["v4"] }
agency_client = { path = "../agency_client" }
async-trait = "0.1.61"
libvcx_core = { path = "../libvcx_core" }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.5"

[dev-dependencies]
tokio = { version = "1.20", features = [ "rt", "macros" ] }
